--- a/css/config.scss
+++ b/css/config.scss
@@ -7,6 +7,9 @@ $Fuente2: 'Archivo', sans-serif;
     --color-variacionTrasparente:#47cfad88;
     --color-gris:#e6e9ed;
 }
+
+$boxShadow:9px 4px 15px 0px rgba(50, 50, 50, 0.32);
+
 $color-claro:var(--color-claro);
 $color-principal:var(--color-principal);
 $color-variacion:var(--color-variacion);
