--- a/css/article.scss
+++ b/css/article.scss
@@ -2,7 +2,7 @@
 
 article{
     width: 90%;
-    height:400px;
+    height:450px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,18 +12,18 @@ article{
     box-shadow:9px 4px 15px 0px rgba(50, 50, 50, 0.32);
     
     img{
-        width: 80px;
-        height: 80px;
+        width: 55%;
+        height: auto;
         border-radius: 0.7rem;
     }
     h1{
         text-align: center;
+        min-width: 60%;
         max-width: 88%;
     }
     p{
         width: 85%;
-        height: 35%;
-        max-height: 5.5em;
+        max-height: 38%;
         overflow-y: hidden;
         text-align: justify;
     }
