--- a/css/marco.scss
+++ b/css/marco.scss
@@ -26,6 +26,8 @@
                 position: relative;
                 background-color:#8c4512 ;
                 .download{
+                    padding-top: 80px;
+                    padding-bottom: 80px;
                     height: 100%;
                     width: 100%;
                     
