--- a/css/marco.scss
+++ b/css/marco.scss
@@ -36,6 +36,7 @@
                     z-index: 1;
                     width:100%;
                     height: 100%;
+                    max-height: 385px;
                     transition: transform 1.2s;
                     transition-delay: 0.15s;
                     &:hover{
