--- a/css/footer.scss
+++ b/css/footer.scss
@@ -6,7 +6,7 @@ footer{
     background-color: #22272d;
     border-top: $color-variacion solid 35px;
     color: $color-claro;
-    height: 120px;
+    height: 12rem;
     p{
         text-align: center;
     }
