--- a/css/article.scss
+++ b/css/article.scss
@@ -1,16 +1,72 @@
 @import "config.scss";
+article::before{
+    content: ' ';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-image:url('https://i.imgur.com/y5Bb3B4.gif') ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    opacity: 0.97;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+}
+article::after{
+    content: ' ';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    background-image:url('https://i.pinimg.com/originals/21/5c/7f/215c7fdca6033092baa04b35c17466bd.gif') ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    opacity: 0.97;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+}
+.giro{
+    transform: rotateY(180deg);
 
+}
 article{
+    perspective: 1000px;
     width: 90%;
     height:450px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
     margin: 10px auto;
     border: 1px solid rgba(128, 128, 128, 0.274);
-    box-shadow:9px 4px 15px 0px rgba(50, 50, 50, 0.32);
-    
+    position: relative; 
+    z-index: 2;
+    transform-style: preserve-3d;
+    transition: all 2s ;
+    .containerF{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        z-index: 2;
+        backface-visibility: hidden;
+        box-shadow:-8px 3px 8px -5px rgba(50, 50, 50, 0.32);
+        transition: all 2s ;
+    }
+    .containerB{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index:-1;
+        transform: rotateY(180deg);
+        backface-visibility: hidden;
+        box-shadow:-8px 3px 8px -5px rgba(50, 50, 50, 0.32);
+        
+    }
     img{
         width: 55%;
         height: auto;
@@ -20,16 +76,73 @@ article{
         text-align: center;
         min-width: 60%;
         max-width: 88%;
+        color: $color-variacion;
     }
     p{
         width: 85%;
         max-height: 38%;
         overflow-y: hidden;
         text-align: justify;
+        color: white;
     }
     a{
         width:fit-content;
-        @include botonBlogs()  
+        @include botonBlogs();
+        color: white;
           
+    }
+    .pageBorder{
+        width: 5rem;
+        height: 5rem;
+        background-image:url('https://i.pinimg.com/originals/21/5c/7f/215c7fdca6033092baa04b35c17466bd.gif') ;
+        position: absolute;
+        top: 0;
+        right: 0;
+        border-left:1px solid rgba(128, 128, 128, 0.274) ;
+        border-bottom:1px solid rgba(128, 128, 128, 0.274) ;
+        cursor: pointer;
+        
+    }
+    .back{
+        background-image: url('https://i.imgur.com/y5Bb3B4.gif');
+    }
+    .pageBorder::before{
+        content: ' ';
+        background-color: white;
+        position: absolute;
+        height: 4rem;
+        width: 7.07rem;
+        bottom: 0;
+        right: 0;
+        transform-origin: 100% 100%;
+        transform:rotate(45deg);
+        clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+        border-bottom:1px solid rgba(128, 128, 128, 0.274);
+    }
+    .pageBorder::after{
+        content: ' ';
+        background-color: transparent;
+        position: absolute;
+        height: 0px;
+        width: 7rem;
+        bottom: 0;
+        right: 0;
+        transform-origin: 100% 100%;
+        transform:rotate(45deg);
+    }
+    .tagsContainer{
+        position: absolute;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        height: fit-content;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        row-gap: 5rem;
+        column-gap: 2rem;
     }
 }
