--- a/css/config.scss
+++ b/css/config.scss
@@ -48,8 +48,9 @@ $color-variacionTrasparente:var(--color-variacionTrasparente);
 
 @mixin botonBlogs(){
     display: inline-block;
+    border-radius: 1rem;
     background-color: transparent;
-    padding: 5px;
+    padding:1rem;
     text-decoration: none;
     color: black;
     border: solid #47cfac 1px;
