--- a/css/header.scss
+++ b/css/header.scss
@@ -1,7 +1,7 @@
 @import "config.scss";
 header{
     width: 100%;
-    height: 60px;
+    height: 6rem;
     display: grid;
     background-color: $color-variacion;    
     grid-template:repeat(2,100%) / repeat(2,50%);
@@ -9,7 +9,10 @@ header{
                          "botLeft botRight";
 }
 .header--transparent{
-    background-color:$color-variacionTrasparente
+    background-color:$color-variacionTrasparente;
+    position: absolute;                   
+    top: 0;
+    z-index: 2;
 }
 
 .header__icon-container{
