--- a/css/correo.scss
+++ b/css/correo.scss
@@ -8,7 +8,6 @@
     height: 70px;
     img{
         width: 70px;
-        height: 72%;
         margin-left: 30px;    
     }
     div{
@@ -22,6 +21,7 @@
         }
         p{
             margin: unset;
+            color: $color-secundario;
         }
     }
 
