--- a/css/header.scss
+++ b/css/header.scss
@@ -13,6 +13,7 @@ header{
     position: absolute;                   
     top: 0;
     z-index: 2;
+
 }
 
 .header__icon-container{
@@ -55,7 +56,7 @@ header{
     margin-left: 10px;
     margin-top: 10px;
     a{
-        color: $color-claro;
+        color: white;
     }
     .a--i{
         color: $color-principal;
