--- a/css/miBlog.scss
+++ b/css/miBlog.scss
@@ -18,6 +18,7 @@ main{
         width: 80%;
         border-bottom: $color-gris 1px solid;
         padding-bottom: 5px;
+        color: $color-principal;
     }
     pre{
         font-family: $Fuente2;
@@ -25,6 +26,7 @@ main{
         height: auto;
         margin-bottom: 30px;
         white-space: pre-wrap;
+        color: $color-secundario;
     }
     section{
         height: auto;
@@ -32,11 +34,12 @@ main{
         display: flex;
         align-items: center;
         margin-bottom: 20px;
-        background-color:$color-gris ;
+        background-color:$color-gris;
         max-width: 1000px;
         border-radius: 10px;
         padding: 20px;
         box-shadow: $boxShadow;
+        color: $color-secundario;
         .tags{
             font-family:$Fuente1;
             font-weight: bold;
@@ -74,6 +77,7 @@ main{
             font-family: $Fuente1;
             font-weight: bold;
             margin-right: 5px;
+            color: $color-secundario;
         }
     }
 }
