--- a/css/acercaMi.scss
+++ b/css/acercaMi.scss
@@ -45,3 +45,43 @@ h2{
     padding: 25px 0;
     overflow-y: hidden;
 }
+.filter{
+    margin-top: 1rem;
+    text-align: center;
+    input{
+        transition: all 1s;
+        width: 0rem;
+        height: 3rem;
+        padding: 0;
+        margin: 0;
+        text-indent: 1rem;
+    }
+    .openFilter{
+        width: 30%;
+        border: solid 2px black;
+    }
+    .closeFilter{
+        
+        border: solid 2px transparent;
+        visibility: hidden;
+    }
+    span{
+        font-family:$Fuente2;
+    }
+}
+
+
+@keyframes inputShow{
+    0% {
+        width: 0rem;
+        height: 3rem;
+        padding: 0;
+        border: none;
+        border: solid 3px transparent;
+
+    }
+    100% {
+        width: 50%;
+        border: solid 3px black;
+    }
+}
