--- a/css/marco.scss
+++ b/css/marco.scss
@@ -6,6 +6,7 @@
     height: 100%;
     border: 5px solid #d99737;
     background-color:#d99737 ;
+    max-width: 80rem;
     .M2{
         display: flex;
         align-items: center;
@@ -36,7 +37,6 @@
                     z-index: 1;
                     width:100%;
                     height: 100%;
-                    max-height: 385px;
                     transition: transform 1.2s;
                     transition-delay: 0.15s;
                     &:hover{
