--- a/css/miBlog.scss
+++ b/css/miBlog.scss
@@ -1,83 +1,82 @@
-@import "config.scss";
-main{
+@import 'config.scss';
+main {
+  display: flex;
+  text-align: justify;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 70px;
+  min-height: 95vh;
+  img {
+    width: 90%;
+    height: fit-content;
+    border-radius: 0.3em;
+    max-width: 900px;
+  }
+  h1 {
+    margin: 20px 0;
+    text-align: center;
+    width: 80%;
+    border-bottom: $color-gris 1px solid;
+    padding-bottom: 5px;
+    color: $color-principal;
+  }
+  pre {
+    font-family: $Fuente2;
+    width: 75%;
+    height: auto;
+    margin-bottom: 30px;
+    white-space: pre-wrap;
+    color: $color-secundario;
+    line-height: 1.4em;
+  }
+  section {
+    height: auto;
+    width: 90%;
     display: flex;
-    text-align: justify;
-    flex-direction: column;
     align-items: center;
-    margin-top: 70px;
-    min-height: 95vh;
-    img{
-        width: 90%;
-        height: fit-content; 
-        border-radius: 0.3em;
-        max-width: 900px; 
+    margin-bottom: 20px;
+    background-color: $color-gris;
+    max-width: 1000px;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: $boxShadow;
+    color: $color-secundario;
+    .tags {
+      font-family: $Fuente1;
+      font-weight: bold;
+      width: fit-content;
+      margin-right: 4px;
     }
-    h1{
-        margin: 20px 0;
-        text-align: center;
-        width: 80%;
-        border-bottom: $color-gris 1px solid;
-        padding-bottom: 5px;
-        color: $color-principal;
+    .tagscontainer {
+      height: auto;
+      width: 90%;
+      display: flex;
+      gap: 25px;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-evenly;
     }
-    pre{
-        font-family: $Fuente2;
-        width: 75%;
-        height: auto;
-        margin-bottom: 30px;
-        white-space: pre-wrap;
-        color: $color-secundario;
+  }
+  .linkSection {
+    width: fit-content;
+    max-width: 90%;
+    display: flex;
+    margin-bottom: 20px;
+    background-color: $color-gris;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: $boxShadow;
+    a {
+      width: fit-content;
+      max-height: 1.2em;
+      overflow: hidden;
+      text-decoration: none;
     }
-    section{
-        height: auto;
-        width: 90%;
-        display: flex;
-        align-items: center;
-        margin-bottom: 20px;
-        background-color:$color-gris;
-        max-width: 1000px;
-        border-radius: 10px;
-        padding: 20px;
-        box-shadow: $boxShadow;
-        color: $color-secundario;
-        .tags{
-            font-family:$Fuente1;
-            font-weight: bold;
-            width: fit-content;
-            margin-right: 4px;
-        }
-        .tagscontainer{
-            height: auto;
-            width: 90%;
-            display: flex;
-            gap: 25px;
-            flex-wrap: wrap; 
-            align-items: center;
-            justify-content: space-evenly;
-            
-            
-        }
+    span {
+      font-family: $Fuente1;
+      font-weight: bold;
+      margin-right: 5px;
+      color: $color-secundario;
     }
-    .linkSection{
-        width: fit-content;
-        max-width: 90%;
-        display: flex;
-        margin-bottom: 20px;
-        background-color: $color-gris;
-        border-radius: 5px;
-        padding: 10px;
-        box-shadow: $boxShadow;
-        a{
-            width:fit-content;
-            max-height: 1.2em;
-            overflow: hidden;
-            text-decoration: none;
-        }
-        span{
-            font-family: $Fuente1;
-            font-weight: bold;
-            margin-right: 5px;
-            color: $color-secundario;
-        }
-    }
+  }
 }
