--- a/css/article.scss
+++ b/css/article.scss
@@ -1,126 +1,138 @@
-@import "config.scss";
-article::before{
-    content: ' ';
+@import 'config.scss';
+
+@keyframes spawn {
+  from {
+    right: 200vw;
+  }
+  to {
+    right: 0;
+  }
+}
+
+article::before {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-image: url('https://i.imgur.com/y5Bb3B4.gif');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  opacity: 0.97;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+}
+article {
+  animation-name: spawn;
+  animation-duration: 1.2s;
+  animation-timing-function: ease-out;
+  animation-delay: 0s;
+  animation-iteration-count: unset;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+
+  position: relative;
+  right: 200vw;
+  perspective: 150rem;
+  width: 90%;
+  height: 450px;
+  margin: 10px auto;
+  position: relative;
+  z-index: 2;
+  transform-style: preserve-3d;
+  .containerF {
     position: absolute;
-    top: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
-    background-image:url('https://i.imgur.com/y5Bb3B4.gif') ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    z-index: 2;
+    backface-visibility: hidden;
+    box-shadow: -8px 3px 8px -5px rgba(50, 50, 50, 0.32);
+    transition: all 2s;
+  }
+  .containerB {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    box-shadow: -8px 3px 8px -5px rgba(50, 50, 50, 0.32);
+    z-index: 10;
+    background-image: url('https://i.pinimg.com/originals/21/5c/7f/215c7fdca6033092baa04b35c17466bd.gif');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    opacity: 0.97;
+  }
+  img {
+    width: 55%;
+    height: auto;
+    border-radius: 0.7rem;
+  }
+  h1 {
+    text-align: center;
+    min-width: 60%;
+    max-width: 88%;
+    color: $color-variacion;
+  }
+  p {
+    width: 85%;
+    max-height: 38%;
+    overflow-y: hidden;
+    text-align: justify;
+    color: white;
+  }
+  a {
+    width: fit-content;
+    @include botonBlogs();
+    color: white;
+  }
+  .pageBorder {
+    width: 5rem;
+    height: 5rem;
+    background-image: url('https://i.pinimg.com/originals/21/5c/7f/215c7fdca6033092baa04b35c17466bd.gif');
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-left: 1px solid rgba(128, 128, 128, 0.274);
+    border-bottom: 1px solid rgba(128, 128, 128, 0.274);
+    cursor: pointer;
     transform-style: preserve-3d;
-    backface-visibility: hidden;
-}
-
-.giro{
-    transform: rotateY(180deg);
-
-}
-article{
-    perspective: 1000px;
-    width: 90%;
-    height:450px;
-    margin: 10px auto;
-    position: relative; 
-    z-index: 2;
+  }
+  .back {
+    background-image: url('https://i.imgur.com/y5Bb3B4.gif');
+  }
+  .pageBorder::before {
+    content: ' ';
+    background-color: $color-claro;
+    position: absolute;
+    height: 4rem;
+    width: 7.07rem;
+    bottom: 0;
+    right: 0;
+    transform-origin: 100% 100%;
+    transform: rotate(45deg);
+    clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+    border-bottom: 1px solid rgba(128, 128, 128, 0.274);
     transform-style: preserve-3d;
-    transition: all 1.6s ease-in-out;
-    .containerF{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        z-index: 2;
-        backface-visibility: hidden;
-        box-shadow:-8px 3px 8px -5px rgba(50, 50, 50, 0.32);
-        transition: all 2s ;
-    }
-    .containerB{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        transform: rotateY(180deg);
-        backface-visibility: hidden;
-        box-shadow:-8px 3px 8px -5px rgba(50, 50, 50, 0.32);
-        z-index:10;
-        background-image:url('https://i.pinimg.com/originals/21/5c/7f/215c7fdca6033092baa04b35c17466bd.gif') ;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-    }
-    img{
-        width: 55%;
-        height: auto;
-        border-radius: 0.7rem;
-    }
-    h1{
-        text-align: center;
-        min-width: 60%;
-        max-width: 88%;
-        color: $color-variacion;
-    }
-    p{
-        width: 85%;
-        max-height: 38%;
-        overflow-y: hidden;
-        text-align: justify;
-        color: white;
-    }
-    a{
-        width:fit-content;
-        @include botonBlogs();
-        color: white;
-          
-    }
-    .pageBorder{
-        width: 5rem;
-        height: 5rem;
-        background-image:url('https://i.pinimg.com/originals/21/5c/7f/215c7fdca6033092baa04b35c17466bd.gif') ;
-        position: absolute;
-        top: 0;
-        right: 0;
-        border-left:1px solid rgba(128, 128, 128, 0.274) ;
-        border-bottom:1px solid rgba(128, 128, 128, 0.274) ;
-        cursor: pointer;
-        transform-style: preserve-3d;
-        
-    }
-    .back{
-        background-image: url('https://i.imgur.com/y5Bb3B4.gif');
-    }
-    .pageBorder::before{
-        content: ' ';
-        background-color: $color-claro;
-        position: absolute;
-        height: 4rem;
-        width: 7.07rem;
-        bottom: 0;
-        right: 0;
-        transform-origin: 100% 100%;
-        transform:rotate(45deg);
-        clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-        border-bottom:1px solid rgba(128, 128, 128, 0.274);
-        transform-style: preserve-3d;
-    }
-    .tagsContainer{
-        position: absolute;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        align-items: center;
-        height: fit-content;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        row-gap: 5rem;
-        column-gap: 2rem;
-    }
+  }
+  .tagsContainer {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    height: fit-content;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    row-gap: 5rem;
+    column-gap: 2rem;
+  }
 }
