--- a/css/blogs.scss
+++ b/css/blogs.scss
@@ -1,56 +1,56 @@
-@import "config.scss";
+@import 'config.scss';
 
-.main__principal{
+.main__principal {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: fit-content;
+  margin-top: 60px;
+  margin-bottom: 10px;
+  background-color: $color-gris;
+  img {
+    width: 80%;
+    height: 70%;
+    border-radius: 0.5rem;
+    margin: 20px 0;
+  }
+  article {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: fit-content;
-    margin-top: 60px;
-    margin-bottom: 10px;
-    background-color:$color-gris;
-    img{
-        width: 80%;
-        height: 70%;
-        border-radius: 0.5rem;
-        margin: 20px 0;
+    width: 85%;
+    h1 {
+      text-align: center;
+      color: $color-principal;
     }
-    article{
-        display: flex;
-        flex-direction: column;
-        align-items:center;
-        width: 85%;
-        h1{
-            text-align: center;
-            color: $color-principal;
-        }
-        p{
-            margin: 20px 0;
-            text-align: justify;
-            color: $color-secundario;
-            opacity: 0.9;
-        }
-        a{
-            margin: 10px 0;
-            @include botonBlogs();
-            color:$color-principal;
-        }
+    p {
+      margin: 20px 0;
+      text-align: justify;
+      color: $color-secundario;
+      opacity: 0.9;
     }
+    a {
+      margin: 10px 0;
+      @include botonBlogs();
+      color: $color-principal;
+    }
+  }
 }
 
-.main__blogs{
-    h2{
-        width: 80%;
-        text-align: center;
-        border-bottom: 1px solid rgba(128, 128, 128, 0.466);
-        margin: 45px auto;
-        padding-bottom: 15px;
-        color: $color-principal;
-    }
-    div{
-        display: grid;
-        grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
-        margin: 15px 0;
-    }    
+.main__blogs {
+  h2 {
+    width: 80%;
+    text-align: center;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.466);
+    margin: 45px auto;
+    padding-bottom: 15px;
+    color: $color-principal;
+  }
+  div {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 5rem 0;
+  }
 }
