posible correccion a error

--- a/css/tools.scss
+++ b/css/tools.scss
@@ -6,7 +6,8 @@
     height: 40px;
     display: flex;
     align-items: center;
-    transition: transform 1s;
+    transition: transform 0.8s ease-out;
+    cursor: pointer;
     
     &:hover{        
         position: relative;
