--- a/css/blogs.scss
+++ b/css/blogs.scss
@@ -52,5 +52,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 5rem 0;
+    justify-items: center; /* Centrar horizontalmente */
+    align-items: center; /* Centrar verticalmente */
   }
 }
