--- a/css/darkmode.scss
+++ b/css/darkmode.scss
@@ -9,10 +9,10 @@ div{
     border-radius: 5rem;
     transition: background 0.8s;
     .night:not(span){
-        background-image: url('https://cdn.dribbble.com/users/970957/screenshots/3004966/media/9c7ca943192a66c3a5a33f598f5ba91d.gif');
+        background-image: url('@/assets/animations/nightyDay.webp');
     }
     .day:not(span){
-        background-image: url('https://thumbs.gfycat.com/AmusedDecentLhasaapso-size_restricted.gif');    
+        background-image: url('@/assets/animations/sunnyDay.webp');    
     }
     span{
         display: block;
@@ -43,7 +43,6 @@ div{
         margin-left: 0.5rem;     
         box-shadow: 0px 0px 30px -10px white;
         background-size: cover;
-        background-image: url('https://i.imgur.com/9A6fpBG.png');
         background-position: center;
         border-left: 0px solid yellow;
 
