--- a/css/tools.scss
+++ b/css/tools.scss
@@ -8,7 +8,9 @@
     align-items: center;
     transition: transform 0.8s ease-out;
     cursor: pointer;
-    
+    @media screen and (min-width:900px) and (max-width:1100px) {
+        min-width: 110px;
+    }
     &:hover{        
         position: relative;
         transform: rotateX(360deg);
@@ -55,3 +57,4 @@
         border-bottom-left-radius: 1px;
     }
 }
+
