--- a/css/blogs.scss
+++ b/css/blogs.scss
@@ -54,5 +54,6 @@
     gap: 5rem 0;
     justify-items: center; /* Centrar horizontalmente */
     align-items: center; /* Centrar verticalmente */
+    padding-bottom: 2rem;
   }
 }
