--- a/css/article.scss
+++ b/css/article.scss
@@ -42,40 +42,36 @@ article {
   height: 450px;
   position: relative;
   z-index: 2;
-  transform-style: preserve-3d;
-  perspective-origin: center;
-  .containerF {
+  transform-style: preserve-3d;                                                                                                              
+  .containerF,.containerB{
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color: #3a304f;
+    box-shadow: $boxShadow;
+    box-shadow: 0px 0px 15px 0px $color-variacionTrasparente;
+    backface-visibility: visible;
+    opacity: 0.98;
+  }
+  .containerF {
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     z-index: 2;
-    backface-visibility: visible;
-    box-shadow: -8px 3px 8px -5px rgba(50, 50, 50, 0.32);
-    transition: all 2s;
     transform: translateZ(40px);
-    background-image: url('@/assets/animations/redSpace.webp');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
   }
   .containerB {
-    position: absolute;
     width: 100%;
     height: 100%;
     transform: rotateY(180deg);
-    backface-visibility: visible;
-    box-shadow: -8px 3px 8px -5px rgba(50, 50, 50, 0.32);
+    box-shadow: $boxShadow;
     z-index: 1;
-    background-image: url('@/assets/animations/blueSpace.webp');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
   }
   img {
     width: 55%;
@@ -120,9 +116,10 @@ article {
   }
 }
 .bottomSide,.leftSide,.rightSide,.topSide{
+  opacity: 1;
   position: absolute;
   display: block;
-  background-color: #3a304f;
+      background-color: #3a304f;
   pointer-events: none;
 }
 .leftSide{
