--- a/css/acercaMi.scss
+++ b/css/acercaMi.scss
@@ -91,5 +91,6 @@ h2 {
   span {
     color: $color-principal;
     margin: 0 0.5rem;
+    cursor: url('@/assets/img/cursors/pointer.png')  15 15,auto;
   }
 }
