--- a/css/index.scss
+++ b/css/index.scss
@@ -1,6 +1,6 @@
 @import "config.scss";
 .pantalla{
-    background-image: url(https://i.pinimg.com/originals/81/e2/28/81e2285225282c6dc6cbca2545da669a.jpg);
+    background-image: url(@/assets/img/index.webp);
     width: 100vw;
     background-position:center;
     background-size: cover;
