--- a/css/header.scss
+++ b/css/header.scss
@@ -1,5 +1,6 @@
 @import 'config.scss';
 header {
+  position: relative;
   width: 100%;
   height: 6rem;
   display: grid;
@@ -57,9 +58,6 @@ a.nuxt-link-exact-active {
   grid-area: botLeft;
   margin-left: 10px;
   margin-top: 10px;
-  a {
-    color: white;
-  }
   .a--i {
     color: $color-principal;
   }
