--- a/css/article.scss
+++ b/css/article.scss
@@ -35,6 +35,7 @@
   display: none;
 }
 article {
+  transition: transform 0.2s ease;
   box-shadow: 0px 15px 25px -20px $color-variacion;
   animation-name: spawn;
   animation-duration: 1.2s;
@@ -47,7 +48,7 @@ article {
   right: 200vw;
   perspective: 250rem;
   width: 90%;
-  height: 450px;
+  height: 45rem;
   position: relative;
   z-index: 2;
   transform-style: preserve-3d;
@@ -78,7 +79,7 @@ article {
     align-items: center;
     justify-content: space-evenly;
     z-index: 2;
-    transform: translateZ(40px);
+    transform: translateZ(4rem);
   }
   .containerB {
     width: 100%;
@@ -140,12 +141,12 @@ article {
   pointer-events: none;
 }
 .leftSide{
-  width: 42px;
+  width: 4.2rem;
   height: 100%;
   transform: rotateY(-90deg) translateZ(21px) translateX(21px) ;
 }
 .rightSide{
-  width: 42px;
+  width: 4.2rem;
   height: 100%;
   transform: rotateY(-90deg) translateZ(-21px) translateX(21px) ;
   right: 0;
@@ -155,14 +156,14 @@ article {
 .topSide{
   top: 0;
   width: 100%;
-  height: 40px;
+  height: 4rem;
   transform: rotateX(90deg) translateY(20px) translateZ(20px);
 }
 
 .bottomSide{
   bottom: 0;
   width: 100%;
-  height: 40px;
+  height: 4rem;
   transform: rotateX(90deg) translateY(20px) translateZ(-20px);
 
 }
