--- a/css/blogs.scss
+++ b/css/blogs.scss
@@ -7,14 +7,15 @@
   justify-content: center;
   width: 100%;
   height: fit-content;
-  margin-top: 60px;
-  margin-bottom: 10px;
+  margin-top: 6rem;
+  margin-bottom: 1rem;
+  padding:  2rem 0;
   background-color: $color-gris;
   img {
     width: 80%;
     height: 70%;
     border-radius: 0.5rem;
-    margin: 20px 0;
+    margin: 2rem 0;
   }
   article {
     display: flex;
@@ -26,13 +27,17 @@
       color: $color-principal;
     }
     p {
-      margin: 20px 0;
+      margin: 2rem 0;
       text-align: justify;
       color: $color-secundario;
-      opacity: 0.9;
+      opacity: 1;
+      line-height: 1.3em;
+      max-height: 9.1em;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
     a {
-      margin: 10px 0;
+      margin: 1rem 0;
       @include botonBlogs();
       color: $color-principal;
     }
@@ -43,14 +48,14 @@
   h2 {
     width: 80%;
     text-align: center;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.466);
-    margin: 45px auto;
-    padding-bottom: 15px;
+    border-bottom: 0.1rem solid rgba(128, 128, 128, 0.466);
+    margin: 4.5rem auto;
+    padding-bottom: 1.5rem;
     color: $color-principal;
   }
   div {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: 5rem 0;
     justify-items: center; /* Centrar horizontalmente */
     align-items: center; /* Centrar verticalmente */
