--- a/css/config.scss
+++ b/css/config.scss
@@ -83,6 +83,11 @@ $color-grisOscuroDMO:var(color-grisOscuroDMO);
 }
 
 @mixin botonBlogs(){
+    @keyframes moveBackground {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+      }
     display: inline-block;
     border-radius: 1rem;
     background-color: transparent;
@@ -91,7 +96,9 @@ $color-grisOscuroDMO:var(color-grisOscuroDMO);
     color: black;
     border: solid #47cfac 1px;
     &:hover{
-        background-color: #47cfac;
+        background-image: linear-gradient(270deg,$color-variacionTrasparente,$color-variacion);
+        background-size: 250% 250%;
+        animation: moveBackground 2s linear infinite; 
         color: white;
     }
 
