--- a/css/global.scss
+++ b/css/global.scss
@@ -19,7 +19,7 @@ body {
   background-color: $color-claro;
   transition: background-color 1s ease-in;
   overflow-y: scroll;
-  max-height: 100vh;
+  max-height: 100dvh;
 
 }
 p {
