--- a/css/article.scss
+++ b/css/article.scss
@@ -102,7 +102,8 @@ article {
   }
   p {
     width: 85%;
-    max-height:5.5em ;
+    line-height: 1.1em;
+    max-height:var(1.1em*6) ;
     overflow-y: hidden;
     text-align: justify;
     color: white;
